--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "name": "two-factor",
   "title": "Two Factor",
+  "private": true,
   "homepage": "https://github.com/wordpress/two-factor",
-  "scripts": {
-    "deploy": "grunt deploy",
-    "build": "npm run readme && grunt build",
-    "test": "DIFF_BASE=master ./vendor/xwp/wp-dev-lib/scripts/pre-commit",
-    "readme": "./vendor/xwp/wp-dev-lib/scripts/generate-markdown-readme",
-    "phpunit": "DEV_LIB_ONLY=phpunit SYNC_README_MD=0 ./vendor/xwp/wp-dev-lib/scripts/pre-commit",
-    "preinstall": "composer install",
-    "precommit": "DEV_LIB_SKIP=phpunit ./vendor/xwp/wp-dev-lib/scripts/pre-commit",
-    "docker-cli": "docker-compose run wpdevlib",
-    "docker-test": "docker-compose run -e DEV_LIB_ONLY=phpunit -e SYNC_README_MD=0 wpdevlib ./vendor/xwp/wp-dev-lib/scripts/pre-commit",
-    "docker-lint": "docker-compose run -e DEV_LIB_SKIP=phpunit wpdevlib ./vendor/xwp/wp-dev-lib/scripts/pre-commit"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wordpress/two-factor.git"
   },
   "author": "georgestephanis",
   "license": "GPL-2.0+",
+  "scripts": {
+    "build": "grunt build",
+    "deploy": "grunt deploy",
+    "env": "wp-env",
+    "lint": "npm-run-all lint-*",
+    "lint-php": "composer lint",
+    "lint-js": "wp-scripts lint-js ./providers/js",
+    "preinstall": "composer install",
+    "test": "composer test"
+  },
   "devDependencies": {
-    "grunt": "^1.0.4",
-    "grunt-cli": "^1.3.2",
+    "@wordpress/env": "^4.0.4",
+    "@wordpress/scripts": "^16.0.0",
+    "grunt": "^1.4.0",
+    "grunt-cli": "^1.4.2",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-wp-deploy": "^2.0.0",
-    "husky": "^0.14.3",
-    "jshint": "^2.11.0",
+    "grunt-wp-deploy": "^2.1.2",
     "load-grunt-tasks": "^4.0.0",
+    "npm-run-all": "^4.1.5",
     "parse-gitignore": "^0.5.1"
   },
   "dependencies": {}
