--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,18 @@
     "php": ">=5.6"
   },
   "require-dev": {
-    "php-coveralls/php-coveralls": "^1.0",
-    "wp-coding-standards/wpcs": "^2.2.1",
-    "xwp/wp-dev-lib": "^1.0"
+    "php-coveralls/php-coveralls": "^2.4",
+    "wp-coding-standards/wpcs": "^2.3",
+    "wp-phpunit/wp-phpunit": "^5.7",
+    "phpunit/phpunit": "^5.7",
+    "roots/wordpress": "^5.7"
+  },
+  "scripts": {
+    "lint": [
+      "phpcs",
+      "@composer validate"
+    ],
+    "lint-fix": "phpcbf",
+    "test": "phpunit"
   }
 }
